--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build && cp -r dist/* public/",
+        "build": "vite build && cp -r public/build/* public/",,
         "dev": "vite",
         "preview": "vite preview"
     },
