--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build && cp -r public/build/* public/",
-        "dev": "vite",
+       "dev": "vite",
+        "build": "vite build",
         "preview": "vite preview"
     },
     "devDependencies": {
