--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": "dist",
-    "framework": "vite",
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
-}
+  "buildCommand": "cd farm-management-client && npm install && npm run build",
+  "outputDirectory": "farm-management-client/dist",
+  "framework": "vite"
+} 
